--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Rubik', sans-serif;
 }
 
 body {
@@ -14,22 +15,38 @@ body {
     background-color: #09a5ff;
     height: 100vh;
     padding: 0 40px;
+    margin: 0;
     color: white;
-    gap: 0;
 }
+
 
 .sidebar p {
-    font-size: 2rem;
-    margin-bottom: 0;
+    margin: 8px 0 0; 
 }
 
-.sidebar-items-top ul,
-.sidebar-items-bottom ul {
-    font-size: 1.5rem;
+.sidebar ul {
+    margin: 0;
+    padding: 0;
+}
+
+.sidebar-items-top *,
+.sidebar-items-bottom  * {
+    font-size: 0.8rem;
     list-style: none;
+    margin: 0;
+    margin-top: 6px;
+    justify-content: start;    
 }
 
 .sidebar-items-top li,
 .sidebar-items-bottom li {
-    padding: 8px 0;
+    display: flex;
+    gap: 8px;
+    margin: 0px;
 }
+
+.sidebar img {
+    width: 1rem;
+    height: 1rem;    
+}
+
