--- a/style.css
+++ b/style.css
@@ -8,45 +8,83 @@ body {
     padding: 0;
     margin: 0;
     grid-template-columns: 1fr 4fr;
+    height: 100vh;
+    background-color: #d4d4d4;
 }
 
-.sidebar {
+nav {
     display: grid;
     background-color: #09a5ff;
-    height: 100vh;
-    padding: 0 40px;
+    padding: 0 30px;
     margin: 0;
     color: white;
+    grid-auto-rows: min-content;
+    gap: 3rem;
 }
 
 
-.sidebar p {
+.sidebar > p {
     margin: 8px 0 0; 
+    font-size: 2rem;
 }
 
-.sidebar ul {
+ul {
     margin: 0;
     padding: 0;
 }
 
 .sidebar-items-top *,
-.sidebar-items-bottom  * {
-    font-size: 0.8rem;
+.sidebar-items-bottom * {
+    font-size: 1.3rem;
     list-style: none;
     margin: 0;
     margin-top: 6px;
     justify-content: start;    
 }
 
-.sidebar-items-top li,
-.sidebar-items-bottom li {
+li {
     display: flex;
-    gap: 8px;
+    gap: 12px;
     margin: 0px;
 }
 
-.sidebar img {
-    width: 1rem;
-    height: 1rem;    
+.icon {
+    width: 1.3rem;
+    height: 1.3rem;    
 }
 
+header {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    background-color: #ffffff;
+    box-shadow: 0 3px 4px -1px #b4b4b4;
+    padding: 20px 40px;
+}
+
+.header-left {
+    justify-items: center;
+    align-items: center;
+}
+
+.profile-info {
+    display: flex;
+}
+
+.header-buttons {
+    display: flex;
+    gap: 10px;
+}
+
+button {
+    background-color: #008fe2;
+    color: #ffffff;
+    font-size: 0.9rem;
+    border: none;
+    border-radius: 16px;
+    height: 2rem;
+    width: 6rem;
+}
+
+button:hover {
+    box-shadow: 0px 0px 4px 4px rgba(0,148,255,0.75);
+}
