--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root {
+    --grey-text-color: #808080;
+    --light-bg-color: #ffffff;
+}
+
+
+
 * {
     box-sizing: border-box;
     font-family: 'Rubik', sans-serif;
@@ -14,7 +21,7 @@ body {
 
 nav {
     display: grid;
-    background-color: #09a5ff;
+    background-color: #118bd1;
     padding: 0 30px;
     margin: 0;
     color: white;
@@ -56,7 +63,7 @@ li {
 header {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    background-color: #ffffff;
+    background-color: var(--light-bg-color);
     box-shadow: 0 3px 4px -1px #b4b4b4;
     padding: 20px 40px;
 }
@@ -86,5 +93,66 @@ button {
 }
 
 button:hover {
-    box-shadow: 0px 0px 4px 4px rgba(0,148,255,0.75);
+    box-shadow: 0px 0px 4px 4px #0183e0dc;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+    margin: 20px;
+}
+
+.projects-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 16px;
+}
+
+.card {
+    background-color: var(--light-bg-color);
+    border-radius: 12px;
+    border-left: 0.4rem solid #e2ad00;
+    padding: 10px;
+}
+.card p {
+    color: #5c5c5c;
+}
+
+.other-info {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.announcement-wrapper {
+    background-color: var(--light-bg-color);
+    border-radius: 12px;
+    padding: 20px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 8px;
+}
+
+.announcement-card:nth-child(2n) {
+    border-top: 1px solid #c7c6c6;
+    border-bottom: 1px solid #c7c6c6;
+}
+
+.announcement-card p {
+    font-size: 0.8rem;
+    color: #5c5c5c;
+    margin-top: 4px;
+}
+
+.announcement-card h6 {
+    font-size: 0.8rem;
+    margin-top: 12px;
+    margin-bottom: 0;
+}
+
+.trending-list {
+    background-color: var(--light-bg-color);
+    border-radius: 12px;
+    padding: 20px;
 }
