--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
     --grey-text-color: #808080;
     --light-bg-color: #ffffff;
+    --shadow: 0 3px 4px -1px #525252;
 }
 
 
@@ -14,7 +15,7 @@ body {
     display: grid;
     padding: 0;
     margin: 0;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 6fr;
     height: 100vh;
     background-color: #d4d4d4;
 }
@@ -64,22 +65,49 @@ header {
     display: grid;
     grid-template-columns: 2fr 1fr;
     background-color: var(--light-bg-color);
-    box-shadow: 0 3px 4px -1px #b4b4b4;
+    box-shadow: var(--shadow);
     padding: 20px 40px;
 }
 
+
 .header-left {
-    justify-items: center;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+.profile-info-left{
+    display: flex;
     align-items: center;
 }
 
-.profile-info {
+.profile-picture {
+    width: 4rem;
+    height: 4rem;
+}
+
+.profile-info-right {
     display: flex;
+    gap: 16px;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 16px;
+}
+
+
+.header-right {
+    display: grid;
+}
+
+.mini-profile-picture {
+    width: 2.5rem;
+    height: 2.5rem;
 }
 
 .header-buttons {
     display: flex;
     gap: 10px;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 button {
@@ -98,7 +126,7 @@ button:hover {
 
 main {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
     gap: 20px;
     margin: 20px;
 }
@@ -114,15 +142,37 @@ main {
     background-color: var(--light-bg-color);
     border-radius: 12px;
     border-left: 0.4rem solid #e2ad00;
-    padding: 10px;
+    padding: 16px;
+    display: grid;
+    gap: 20px;
+    box-shadow: var(--shadow);
 }
+
+.card h4 {
+    margin-bottom: 0;
+    font-size: 0.9rem;
+}
+
 .card p {
-    color: #5c5c5c;
+    color: var(--grey-text-color);
+    margin-top: 0;
+    font-size: 0.8rem;
+}
+
+.card-icons {
+    display: flex;
+    justify-self: end;
+    gap: 20px;
+}
+
+.card-icon {
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 .other-info {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    gap: 20px;
 }
 
 .announcement-wrapper {
@@ -132,6 +182,7 @@ main {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 8px;
+    box-shadow: var(--shadow);
 }
 
 .announcement-card:nth-child(2n) {
@@ -141,8 +192,9 @@ main {
 
 .announcement-card p {
     font-size: 0.8rem;
-    color: #5c5c5c;
+    color: var(--grey-text-color);
     margin-top: 4px;
+
 }
 
 .announcement-card h6 {
@@ -155,4 +207,23 @@ main {
     background-color: var(--light-bg-color);
     border-radius: 12px;
     padding: 20px;
+    margin: 0;
+    display: grid;
+    gap: 20px;
+    box-shadow: 0 3px 4px -1px #525252;
+}
+
+.item-info > p {
+    padding: 0;
+    margin: 0;
+    font-size: 0.85rem;
+}
+
+.item-info p:last-child {
+    color: var(--grey-text-color);
+}
+
+.item-img {
+    width: 2rem;
+    height: 2rem;
 }
