--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 * {
     box-sizing: border-box;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Century Gothic', sans-serif;
 }
 
 body {
@@ -32,28 +32,37 @@ nav {
 
 
 .sidebar > p {
-    margin: 8px 0 0; 
+    margin: 20px 0 0; 
     font-size: 2rem;
+    font-weight: 600;
 }
 
 ul {
     margin: 0;
     padding: 0;
+    display: grid;
+    gap: 16px;
 }
 
-.sidebar-items-top *,
-.sidebar-items-bottom * {
+.sidebar-items-top li a,
+.sidebar-items-bottom li a {
     font-size: 1.3rem;
     list-style: none;
     margin: 0;
-    margin-top: 6px;
-    justify-content: start;    
+    font-weight: 550;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 16px;
 }
 
+a:visited {
+    color: inherit;
+}
+
+
 li {
-    display: flex;
-    gap: 12px;
-    margin: 0px;
+    list-style: none;
 }
 
 .icon {
@@ -72,17 +81,31 @@ header {
 
 .header-left {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
 }
 
 .profile-info-left{
     display: flex;
     align-items: center;
+    gap: 16px;
 }
 
 .profile-picture {
     width: 4rem;
     height: 4rem;
+}
+
+.greeting-text p {
+    font-weight: 600;
+    margin: 6px 0;
+}
+
+.greeting-text::first-line {
+    font-size: 0.8rem;
+}
+
+.greeting-text:last-child {
+    font-size: 1.3rem;
 }
 
 .profile-info-right {
@@ -128,27 +151,26 @@ main {
     display: grid;
     grid-template-columns: 3fr 1fr;
     gap: 20px;
-    margin: 20px;
+    padding: 20px;
 }
 
 .projects-cards {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 16px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12px;
 }
 
 .card {
     background-color: var(--light-bg-color);
     border-radius: 12px;
     border-left: 0.4rem solid #e2ad00;
-    padding: 16px;
+    padding: 8px 16px;
     display: grid;
-    gap: 20px;
     box-shadow: var(--shadow);
 }
 
 .card h4 {
+    margin-top: 8px;
     margin-bottom: 0;
     font-size: 0.9rem;
 }
@@ -157,11 +179,13 @@ main {
     color: var(--grey-text-color);
     margin-top: 0;
     font-size: 0.8rem;
+    font-weight: 400;
 }
 
 .card-icons {
     display: flex;
     justify-self: end;
+    align-items: flex-end;
     gap: 20px;
 }
 
@@ -180,7 +204,7 @@ main {
     border-radius: 12px;
     padding: 20px;
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
     gap: 8px;
     box-shadow: var(--shadow);
 }
@@ -194,7 +218,7 @@ main {
     font-size: 0.8rem;
     color: var(--grey-text-color);
     margin-top: 4px;
-
+    font-weight: 400;
 }
 
 .announcement-card h6 {
@@ -213,14 +237,24 @@ main {
     box-shadow: 0 3px 4px -1px #525252;
 }
 
+.trending-list li {
+    display: flex;
+    gap: 12px;
+}
+
 .item-info > p {
     padding: 0;
     margin: 0;
     font-size: 0.85rem;
 }
 
+.item-info p:first-child {
+    font-weight: 600;
+}
+
 .item-info p:last-child {
     color: var(--grey-text-color);
+    font-weight: 400;
 }
 
 .item-img {
