--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     --grey-text-color: #808080;
     --light-bg-color: #ffffff;
     --shadow: 0 3px 4px -1px #525252;
+    --grey-bg-color: #d4d4d4;
 }
 
 
@@ -17,7 +18,7 @@ body {
     margin: 0;
     grid-template-columns: 1fr 6fr;
     height: 100vh;
-    background-color: #d4d4d4;
+    background-color: var(--grey-bg-color);
 }
 
 nav {
@@ -60,7 +61,6 @@ a:visited {
     color: inherit;
 }
 
-
 li {
     list-style: none;
 }
@@ -78,16 +78,36 @@ header {
     padding: 20px 40px;
 }
 
-
 .header-left {
     display: grid;
     grid-template-rows: repeat(2, 1fr);
+}
+
+.search-bar li {
+    padding-top: 10px;
+    display: flex;
+    gap: 10px;
+    width: 100%;
+}
+
+.search-bar img {
+    height: 2rem;
+    width: 2rem;
+}
+
+input {
+    width: 40vw;
+    height: 3vh;
+    border-radius: 12px;
+    border-width: 0;
+    background-color: var(--grey-bg-color);
 }
 
 .profile-info-left{
     display: flex;
     align-items: center;
     gap: 16px;
+    
 }
 
 .profile-picture {
@@ -114,8 +134,9 @@ header {
     align-items: center;
     justify-content: flex-end;
     padding-right: 16px;
+    font-weight: 600;
+    align-self: start;
 }
-
 
 .header-right {
     display: grid;
@@ -154,10 +175,16 @@ main {
     padding: 20px;
 }
 
+.projects {
+    display: flex;
+    flex-direction: column;
+}
+
 .projects-cards {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 12px;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    height: 100%;
 }
 
 .card {
@@ -171,7 +198,7 @@ main {
 
 .card h4 {
     margin-top: 8px;
-    margin-bottom: 0;
+    margin-bottom: 4px;
     font-size: 0.9rem;
 }
 
